# wake

./: .gitignore  .gitmodules  4.0.0-alpha.1  Dockerfile  LICENSE  PLANNING.adoc  README.adoc  README.md  SECURITY.md  TODOS.md  TODOS.py  funding.json  index.html  mkdocs.yml  purge_cache.sh  pyproject.toml  setup-githooks.sh  setup.py  versions.json  wake-coverage.cov
.githooks/: post-commit  pre-commit  pre-commit.sh  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-feature.yml  2-bug.yml  config.yml
.github/workflows/: build-documentation.yaml  ci.yaml  conda-pack-linux-arm.yaml  conda-pack.yaml  linux-ci.yaml  macos-ci.yaml  migrate.yml  release.yaml  test-build.yaml  todo-to-issue.yaml  windows-ci.yaml
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/api-reference/: index.html
0.1.3/api_reference/: index.html
0.1.3/configuration/: index.html
0.1.3/contributing/: index.html
0.1.3/detectors/: index.html
0.1.3/fuzzer/: index.html
0.1.3/language-server/: index.html
0.1.3/search/: search_index.json
0.1.3/solc-version-manager/: index.html
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/configuration/: index.html
1.0.1/: 404.html  index.html  objects.inv  sitemap.xml
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.1.0/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
1.2.1/: 404.html  index.html  objects.inv  sitemap.xml
1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
1.3.1/: 404.html  index.html  sitemap.xml
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0-rc1/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0-rc2/: 404.html  index.html  sitemap.xml
2.1.0/: 404.html  index.html  sitemap.xml
2.2.0/: 404.html  index.html  sitemap.xml
3.0.0/: 404.html  index.html  sitemap.xml
3.1.0/: 404.html  index.html  sitemap.xml
3.2.0/: 404.html  index.html  sitemap.xml
3.3.0/: index.html  sitemap.xml
3.4.0/: index.html
3.4.1/: sitemap.xml
3.4.2/: 404.html  objects.inv  sitemap.xml
3.5.0/: sitemap.xml
3.6.0/: sitemap.xml
3.6.1/: sitemap.xml
4.0.0/: 404.html  index.html
4.0.0-alpha.1/: 404.html  index.html  objects.inv  sitemap.xml
4.0.0-alpha.2/: objects.inv  sitemap.xml
4.0.1/: 404.html  index.html  objects.inv
4.1.0/: index.html  sitemap.xml
4.1.1/: 404.html  objects.inv
4.10.0/: 404.html
4.10.1/: index.html  sitemap.xml
4.11.0/: sitemap.xml
4.11.1/: sitemap.xml
4.12.0/: objects.inv  sitemap.xml
4.12.0.dev1/: objects.inv  sitemap.xml
4.12.1/: sitemap.xml
4.13.0/: objects.inv
4.13.1/: index.html
4.14.0/: objects.inv  sitemap.xml
4.14.1/: 404.html  index.html  sitemap.xml
4.15.0/: 404.html  index.html
4.16.0/: objects.inv  sitemap.xml
4.16.1/: 404.html  sitemap.xml
4.17.0/: sitemap.xml
4.17.1/: index.html  objects.inv
4.17.2/: wake-schema.json
4.18.0/: index.html  sitemap.xml
4.18.1/: 404.html  objects.inv
4.19.0/: index.html
4.2.0/: 404.html  index.html
4.20.0/: 404.html
4.21.0/: objects.inv
4.22.0/: index.html
4.3.0/: 404.html  sitemap.xml
4.3.1/: index.html  sitemap.xml
4.3.2/: objects.inv  sitemap.xml
4.4.0/: index.html  objects.inv  sitemap.xml
4.4.1/: objects.inv  sitemap.xml
4.5.0/: index.html  sitemap.xml
4.5.1/: 404.html
4.6.0/: objects.inv
4.7.0/: sitemap.xml
4.8.0/: objects.inv  sitemap.xml
4.9.0/: 404.html  index.html  sitemap.xml
5.0.0rc0/: 404.html  index.html  objects.inv  sitemap.xml
abcdefu/: objects.inv
dev/: 404.html  index.html  objects.inv  sitemap.xml
devel/: 404.html  index.html  sitemap.xml
docs/: changelog.md  compilation.md  configuration.md  contributing.md  detectors.md  fuzzer.md  index.md  installation.md  language-server.md  solc-version-manager.md  wake-schema.json
examples/: .gitignore
foobar/: sitemap.xml
latest/: 404.html  index.html
temp/: index.html  objects.inv
temp123/: index.html
tests/: test_compilation.py  test_config.py  test_coverage.py  test_detectors.py  test_flows_genererator.py  test_import_parsing.py  test_re_parsing.py  test_solidity_version_parsing.py  test_svm.py  test_svm_cli.py
wake/: .gitignore  __init__.py  wake.toml
wake_detectors/: __init__.py  abi_encode_with_signature.py  array_delete_nullification.py  axelar_proxy_contract_id.py  balance_relied_on.py  call_options_not_called.py  calldata_tuple_reencoding_head_overflow_bug.py  chainlink_deprecated_function.py  complex_struct_getter.py  empty_byte_array_copy_bug.py  incorrect_interface.py  invalid_memory_safe_assembly.py  missing_return.py  msg_value_nonpayable_function.py  nullyfying_instead_deleting.py  reentrancy.py  struct_mapping_deletion.py  tx_origin.py  unchecked_return_value.py  unprotected_selfdestruct.py  unsafe_delegatecall.py  unsafe_erc20_call.py  unused_contract.py  unused_error.py  unused_event.py  unused_function.py  unused_import.py  unused_modifier.py  utils.py
wake_printers/: __init__.py  abi.py  c3.py  c3_linearization.py  contract_size.py  control_flow_graph.py  imports_graph.py  inheritance_graph.py  inheritance_tree.py  lsp_control_flow_graph.py  lsp_global_symbols_printer.py  lsp_inheritance_graph.py  lsp_linearized_inheritance_graph.py  lsp_openzeppelin_docs.py  lsp_public_functions.py  lsp_references.py  lsp_selectors.py  lsp_yul_definitions.py  modifiers.py  state_changes.py  storage_layout.py  tokens.py
wake_rs/: .gitignore  Cargo.toml  __init__.py  build.py  pyproject.toml  wake_rs.pyi
wake_rs/src/: abi.rs  abi_old.rs  account.rs  address.rs  blocks.rs  chain.rs  chain_interface.rs  chain_snapshot.rs  connect_context.rs  contract.rs  db.rs  eip712.rs  enums.rs  evm.rs  globals.rs  lib.rs  library.rs  memory_db.rs  pytypes.rs  tx.rs  txs.rs  utils.rs  wei.rs
wake_rs/src/core/: mod.rs  signer.rs
wake_rs/src/inspectors/: access_list_inspector.rs  console_log_inspector.rs  coverage_inspector.rs  fqn_inspector.rs  mod.rs  trace_inspector.rs
woke/: README.md  __init__.py  example.py  mkdocs.yml  pyproject.toml  setup.py
woke-js/: README.adoc
xyz/: 404.html  index.html
(+6670 files in other folders)
