[tool.poetry]
name = "eth-wake"
version = "4.2.0"
description = "Wake is a Python-based Solidity development and testing framework with built-in vulnerability detectors."
license = "ISC"
authors = ["Ackee Blockchain"]
readme = "README.md"
homepage = "https://getwake.io"
repository = "https://github.com/Ackee-Blockchain/wake"
documentation = "https://ackeeblockchain.com/wake/docs/latest"
keywords = ["ethereum", "solidity", "security", "testing", "development", "static analysis", "framework", "audit"]
packages = [
    { include = "wake" },
    { include = "wake_detectors" },
    { include = "wake_printers" }
]
include = [
    { path = "examples", format = ["sdist", "wheel"] }
]

[tool.poetry.plugins."wake.plugins.detectors"]
wake-detectors = "wake_detectors"

[tool.poetry.plugins."wake.plugins.printers"]
wake-printers = "wake_printers"

[tool.poetry.dependencies]
python = "^3.7.9"
pydantic = "^1.9.1"
typing-extensions = "^4"
aiohttp = [
    { version = "^3.8", python = "<3.12" },
    { version = ">=3.9.0b1", python = ">=3.12" }
]
aiofiles = "^0.8"
tomli = "^2"
networkx = "^2.5"
click = "^8"
rich-click = "^1.7.1"
rich = "^13.3.2"
pathvalidate = "^2.5"
intervaltree = "^3.1"
graphviz = "^0.19"
tblib = "^1.7"
eth-account = "^0.8"
eth-utils = "^2.1"
eth-abi = { version = "^4.0.0b2", allow-prereleases = true }
parsimonious = "^0.9"
eth-hash = { version = "^0.5.1", extras = ["pycryptodome"] }
websocket-client = "^1.4"
pywin32 = { version = ">= 302", platform = "win32" }
watchdog = "~2.2.0"
pytest = "^7"
ipdb = "^0.13.9"
abch_tree_sitter = "^1.1.1"
abch_tree_sitter_solidity = "^1.2.0"
lazy-import = "^0.2.2"
importlib-metadata = { version = "4.8", python = "<3.10" }
packaging = ">=22.0"
sarif-om = "^1.0.4"
jschema-to-python = "^1.2.3"
tomli-w = "^1.0.0"

pytest-asyncio = { version = "^0.17", optional = true }
GitPython = { version = "^3.1.20", optional = true }

black = { version = "^22", optional = true }
mkdocs-material = { version = "^9", optional = true }
mkdocstrings = { version = "^0.20", optional = true }
mkdocstrings-python = { version = "^1", optional = true }
pymdown-extensions = { version = "^9", optional = true }
pygments = { version = "^2", optional = true }
mike = { version = "^2.0.0", optional = true }
isort = { version = "^5", optional = true }
pillow = [
    { version = "^9", optional = true, python = "<3.12" },
    { version = "^10.1", optional = true, python = ">=3.12" }
]
cairosvg = { version = "^2.7", optional = true }

[tool.poetry.extras]
tests = ["pytest-asyncio", "GitPython"]
dev = ["black", "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "pymdown-extensions", "pygments", "mike", "isort", "pillow", "cairosvg"]

[tool.poetry.scripts]
wake = "wake.cli.__main__:main"
wake-solc = "wake.cli.__main__:wake_solc"

[tool.poetry.urls]
"VS Code Extension" = "https://marketplace.visualstudio.com/items?itemName=AckeeBlockchain.tools-for-solidity"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py37"]

[tool.pyright]
include = ["**/*.py"]
exclude = ["examples"]
pythonVersion = "3.7"
pythonPlatform = "All"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "platform_dependent: platform-dependent test that will need to run on all CIs",
    "slow: slow tests that will not run in git hooks",
]
