[package]
name = "wakers"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
alloy = { version = "0.13", features = ["signer-local", "eip712", "dyn-abi", "signer-mnemonic", "signer-mnemonic-all-languages", "signer-keystore", "signer-trezor", "provider-http", "provider-ws", "rpc-types-eth"] }
pyo3 = { version = "0.24", features = ["extension-module", "num-bigint"] }

log = "0.4.21"
pyo3-log = "0.12.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
revm = { version = "21.0", features = ["alloydb", "std", "serde-json", "optional_eip3607"] }
tokio = "1.39.1"
lazy_static = "1.5.0"
reqwest = "0.12.5"
serde_json = "1.0.120"
url = "2.5.2"
env_logger = "0.11.5"
send_wrapper = "0.6.0"
hex = "0.4.3"
regex = "1.10.6"
revm-inspectors = "0.18.0"
auto_impl = "1.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
eth-keystore = { version = "0.5.0", features = ["geth-compat"] }
bincode = "1.3.3"
serde = "1.0.216"
uuid = { version = "1.12.1", features = ["v4"] }
rust-lapper = "1.1.0"
blake2 = "0.10.6"
